--- a/StyleCSS/camera.css
+++ b/StyleCSS/camera.css
@@ -523,7 +523,7 @@ button:active{
     }
    
 }
-@media (min-width: 1201px) and (max-width: 1500px) {
+@media (min-width: 1201px) {
     .content, #edit-section, #camera-section {
         height: 100svh; /* Giữ cố định chiều cao màn hình */
         display: flex;
