--- a/StyleCSS/camera.css
+++ b/StyleCSS/camera.css
@@ -49,7 +49,7 @@ body {
     transform-origin: center center;
 }
 
-body.portrait #photoCanvas {
+body.vertical #photoCanvas {
     position: absolute;
     top: 0;
     left: 0;
@@ -66,7 +66,7 @@ body.square #photoCanvas {
     z-index: 4;
 }
 
-body.portrait #video {
+body.vertical #video {
     position: absolute;
     width: 265px;
     height: 182px;
@@ -260,7 +260,7 @@ button:active {
 /* Mobile: max-width 750px */
 @media (max-width: 550px) {
     /* Thiết lập khung sườn: Đẩy Sticker lên đỉnh, Nút xuống đáy */
-    body.portrait .content,body.portrait #edit-section,body.portrait #camera-section {
+    body.vertical .content,body.vertical #edit-section,body.vertical #camera-section {
         height: 100svh; /* Giữ cố định chiều cao màn hình */
         display: flex;
         flex-direction: column;
@@ -290,7 +290,7 @@ button:active {
         transform: scale(1.3);
     }
     /* Fix màn hình Chụp (Camera) */
-    body.portrait #camera-wrapper {
+    body.vertical #camera-wrapper {
         position: relative;
          /* Thu nhỏ cả cụm */
         transform-origin: center;
@@ -305,7 +305,7 @@ button:active {
         
     }
 
-    body.portrait #captureButton,body.portrait #completeButton {
+    body.vertical #captureButton,body.vertical #completeButton {
         position: relative ;
         z-index: 100 ;
         top: auto ;
@@ -398,7 +398,7 @@ button:active {
 
 /* Desktop: min-width 992px and max-width 1200px */
 @media (min-width: 551px) and (max-width: 1200px) {
-    body.portrait .content, body.portrait #edit-section,body.portrait #camera-section {
+    body.vertical .content, body.vertical #edit-section,body.vertical #camera-section {
         height: 100svh; /* Giữ cố định chiều cao màn hình */
         display: flex;
         flex-direction: column;
@@ -426,7 +426,7 @@ button:active {
         gap: 0; /* Triệt tiêu mọi khoảng hở mặc định */
         transform: scale(1.3);
     }
-    body.portrait #camera-wrapper {
+    body.vertical #camera-wrapper {
         position: relative;
         transform: scale(0.6); /* Thu nhỏ cả cụm */
         transform-origin: center;
@@ -439,7 +439,7 @@ button:active {
         transform-origin: center;
         bottom: 100px;
     }
-    body.portrait #captureButton, body.portrait #completeButton {
+    body.vertical #captureButton, body.vertical #completeButton {
         position: relative !important;
         z-index: 100 !important;
         top: auto !important;
@@ -612,7 +612,7 @@ button:active {
         padding: 10px 20px !important;
         margin: 0 !important;
     }
-    body.portrait .icon-sticker-menu{
+    body.vertical .icon-sticker-menu{
         transform: scale(0.8);
         top: auto;
         left: 70%;
